[gd_scene load_steps=9 format=2]

[ext_resource path="res://Asstes/Objects/unit_t2.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI/Menu/BaseScene/MenuButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/UI/Menu/TitleScreen.gd" type="Script" id=3]
[ext_resource path="res://fonts/kirifont/KiriFont.otf" type="DynamicFontData" id=5]
[ext_resource path="res://Asstes/Objects/base.png" type="Texture" id=6]
[ext_resource path="res://fonts/source-code-pro/source-code-pro-2.010R-ro-1.030R-it/TTF/SourceCodePro-Light.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 79
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 21
font_data = ExtResource( 7 )

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
singleplayer_scene = "res://Scenes/UI/Menu/SPLevelScreen.tscn"

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopRow" type="HBoxContainer" parent="Menu"]
margin_right = 1040.0
margin_bottom = 190.0

[node name="Character" type="TextureRect" parent="Menu/TopRow"]
margin_right = 170.0
margin_bottom = 190.0
rect_min_size = Vector2( 170, 190 )
texture = ExtResource( 1 )
expand = true

[node name="TitleLabel" type="Label" parent="Menu/TopRow"]
margin_left = 174.0
margin_top = 55.0
margin_right = 974.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.533333, 0.329412, 0.815686, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 6
text = "Slay Them All!"

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 194.0
margin_right = 1040.0
margin_bottom = 434.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 518.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="SingleplayerButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 10.0
margin_right = 518.0
margin_bottom = 70.0

[node name="Label" parent="Menu/CenterRow/Buttons/SingleplayerButton" index="0"]
text = "Singleplayer"

[node name="MultiplayerButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 90.0
margin_right = 518.0
margin_bottom = 150.0

[node name="Label" parent="Menu/CenterRow/Buttons/MultiplayerButton" index="0"]
text = "Multiplayer"

[node name="QuitButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 2 )]
margin_top = 170.0
margin_right = 518.0
margin_bottom = 230.0

[node name="Label" parent="Menu/CenterRow/Buttons/QuitButton" index="0"]
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 522.0
margin_right = 1040.0
margin_bottom = 240.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SecondaryImg" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 154.0
margin_right = 364.0
margin_bottom = 240.0
rect_min_size = Vector2( 210, 240 )
texture = ExtResource( 6 )
expand = true

[node name="VersionLabel" type="Label" parent="Menu"]
margin_top = 470.0
margin_right = 1040.0
margin_bottom = 527.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.819608, 0.847059, 0.878431, 1 )
custom_colors/font_color_shadow = Color( 0.533333, 0.329412, 0.815686, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 5
text = "Version 0.7.0
Green Armadillo Lizard"
[connection signal="pressed" from="Menu/CenterRow/Buttons/SingleplayerButton" to="." method="_on_SingleplayerButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/QuitButton" to="." method="_on_QuitButton_pressed"]

[editable path="Menu/CenterRow/Buttons/SingleplayerButton"]

[editable path="Menu/CenterRow/Buttons/MultiplayerButton"]

[editable path="Menu/CenterRow/Buttons/QuitButton"]
